--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,112 +1,85 @@
-<header class="mb-0">
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark mb-0">
-    <div class="container">
-    <a class="navbar-brand" href="index.html">
-      <img src="assets/images/logo-light.png" alt="Logo">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Disabled</a>
-        </li>
-      </ul>
-    </div>
-    </div>
-  </nav>
-</header>
+<header class="navbar navbar-expand-sm navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow px-5">
+  <div class="container">
+  <a class="navbar-brand me-0 py-3" href="#"><img src="assets/images/logo-light.png" style="width:100%;" alt="Logo"/></a>
+  <button class="navbar-toggler d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-<main role="main" class="mt-0">
+  <div class="collapse navbar-collapse" id="mainMenu">
+    <ul class="navbar-nav" id="mainMenuList">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/">Home</a>
+      </li>
 
-  <div id="myCarousel" class="carousel slide mt-0" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
-        <div class="container">
-          <div class="carousel-caption text-left">
-            <h1>Example headline.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Another example headline.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
-        <div class="container">
-          <div class="carousel-caption text-right">
-            <h1>One more for good measure.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+      <li class="nav-item">
+        <a class="nav-link" href="#about">About us</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/">Contact</a>
+      </li>
+    </ul>
   </div>
 
+  <div class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/">Login</a>
+    </li>
+  </div>
+  </div>
+</header>
+
+<main role="main">
+  <section class="jumbotron text-center vertical-center" style="">
+    <div class="container text-white">
+      <h1 class="jumbotron-heading">Welcome to GodFest</h1>
+      <p>We believe everyone should have great parties. If you do too, click below to see more!</p>
+      <p>
+        <a href="#about" class="btn btn-primary my-2">Read more</a>
+      </p>
+    </div>
+  </section>
+
+  <!-- Anchor Point for About Us, needs padding top to take the menu into account -->
+  <div id="about" style="padding-top: 80px;"></div>
 
   <!-- Marketing messaging and featurettes
   ================================================== -->
   <!-- Wrap the rest of the page in another container to center all the content. -->
 
   <div class="container marketing">
+    <div class="text-center mb-5">
+      <h1>About us</h1>
+    </div>
 
-    <!-- Three columns of text below the carousel -->
+    <!-- Four columns of text below the Jumbotron -->
     <div class="row">
-      <div class="col-lg-4">
-        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+      <div class="col-lg-3">
+        <img src="assets/images/House_160x160.png" alt="Generic placeholder image" width="140" height="140">
         <h2>Heading</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc iaculis in nisi sit amet laoreet. Donec efficitur nulla a velit dapibus facilisis. Aliquam convallis, justo nec feugiat congue, eros lectus fermentum tortor, at consequat turpis magna eget ligula.</p>
+      </div><!-- /.col-lg-3 -->
+      <div class="col-lg-3">
+        <img src="assets/images/Coctail_160x160.png" alt="Generic placeholder image" width="140" height="140">
         <h2>Heading</h2>
-        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc iaculis in nisi sit amet laoreet. Donec efficitur nulla a velit dapibus facilisis. Aliquam convallis, justo nec feugiat congue, eros lectus fermentum tortor, at consequat turpis magna eget ligula.</p>
+      </div><!-- /.col-lg-3 -->
+      <div class="col-lg-3">
+        <img src="assets/images/Notes_160x160.png" alt="Generic placeholder image" width="140" height="140">
         <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc iaculis in nisi sit amet laoreet. Donec efficitur nulla a velit dapibus facilisis. Aliquam convallis, justo nec feugiat congue, eros lectus fermentum tortor, at consequat turpis magna eget ligula.</p>
+      </div><!-- /.col-lg-3 -->
+      <div class="col-lg-3">
+        <img src="assets/images/Confetti_160x160.png" alt="Generic placeholder image" width="140" height="140">
+        <h2>Heading</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc iaculis in nisi sit amet laoreet. Donec efficitur nulla a velit dapibus facilisis. Aliquam convallis, justo nec feugiat congue, eros lectus fermentum tortor, at consequat turpis magna eget ligula.</p>
+      </div><!-- /.col-lg-3 -->
     </div><!-- /.row -->
 
 
     <!-- START THE FEATURETTES -->
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider grey">
 
     <div class="row featurette">
       <div class="col-md-7">
@@ -114,11 +87,11 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
       <div class="col-md-5">
-        <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        <img class="featurette-image img-fluid mx-auto" src="assets/images/Dj_500x500.png" alt="Dj party featurette">
       </div>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider grey">
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
@@ -126,11 +99,11 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        <img class="featurette-image img-fluid mx-auto" src="assets/images/Wineglass_500x500.png" alt="Generic placeholder image">
       </div>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider grey">
 
     <div class="row featurette">
       <div class="col-md-7">
@@ -138,11 +111,11 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
       <div class="col-md-5">
-        <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        <img class="featurette-image img-fluid mx-auto" src="assets/images/Room_500x500.png" alt="Generic placeholder image">
       </div>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider grey">
 
     <!-- /END THE FEATURETTES -->
 
